Fix comment to hide CSS marker

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
       "https://www.youtube.com/@labregoia"
     ]
   }
-  </script>-- seu CSS principal -->
+  </script>
+  <!-- seu CSS principal -->
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
