Set favicon to logo-512 image

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Labrego IA | IA para Empresas, Apps e Automação com Foco em ROI</title>
+  <link rel="icon" href="/assets/logo-512.png" type="image/png">
   <meta name="description" content="A Labrego IA desenvolve aplicativos, softwares e sistemas com Inteligência Artificial para empresas. Foco em automação de processos e soluções com ROI de curto prazo.">
   <meta name="keywords" content="inteligência artificial para empresas, desenvolvimento de aplicativos, automação de processos, software sob medida, consultoria em ia, roi, labrego ia">
   <link rel="canonical" href="https://labregoia.com/">
