--- a/pages/agentes-inteligentes.html
+++ b/pages/agentes-inteligentes.html
@@ -14,6 +14,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agentes Inteligentes - Labrego IA</title>
+    <link rel="icon" href="/assets/logo-512.png" type="image/png">
     <meta name="description" content="Chatbots e voicebots com IA conversacional para atendimento, vendas e suporte 24h.">
     <meta name="keywords" content="agentes inteligentes, chatbots, voicebots, IA conversacional, atendimento automatizado">
     <link rel="canonical" href="https://labregoia.com/servicos/agentes-inteligentes">
