--- a/pages/aplicativos-sob-medida.html
+++ b/pages/aplicativos-sob-medida.html
@@ -14,6 +14,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aplicativos Sob Medida - Labrego IA</title>
+    <link rel="icon" href="/assets/logo-512.png" type="image/png">
     <meta name="description" content="Desenvolvimento de aplicativos e sistemas sob medida para web e mobile, integrando processos e escalando operações.">
     <meta name="keywords" content="desenvolvimento de aplicativos, desenvolvimento de apps, software sob medida, sistemas personalizados, aplicativos mobile">
     <link rel="canonical" href="https://labregoia.com/servicos/aplicativos-sob-medida">
