--- a/pages/automacao-processos.html
+++ b/pages/automacao-processos.html
@@ -14,6 +14,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Automação de Processos - Labrego IA</title>
+    <link rel="icon" href="/assets/logo-512.png" type="image/png">
     <meta name="description" content="Automação de processos e RPA para eliminar tarefas repetitivas, aumentar produtividade e integrar sistemas empresariais.">
     <meta name="keywords" content="automação de processos, RPA, automação empresarial, integração de sistemas, produtividade">
     <link rel="canonical" href="https://labregoia.com/servicos/automacao-processos">
