--- a/pages/cases.html
+++ b/pages/cases.html
@@ -14,6 +14,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cases de Sucesso - Labrego IA</title>
+    <link rel="icon" href="/assets/logo-512.png" type="image/png">
     <meta name="description" content="Conheça os cases de sucesso da Labrego IA: projetos reais de inteligência artificial que transformaram negócios e geraram resultados excepcionais.">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
