--- a/pages/inteligencia-artificial.html
+++ b/pages/inteligencia-artificial.html
@@ -14,6 +14,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inteligência Artificial Aplicada - Labrego IA</title>
+    <link rel="icon" href="/assets/logo-512.png" type="image/png">
     <meta name="description" content="Soluções de inteligência artificial e machine learning que transformam dados em ação estratégica e automatizam processos complexos.">
     <meta name="keywords" content="inteligência artificial, IA aplicada, machine learning, automação inteligente, análise de dados">
     <link rel="canonical" href="https://labregoia.com/servicos/inteligencia-artificial">
