--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -14,6 +14,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serviços de Inteligência Artificial - Labrego IA</title>
+    <link rel="icon" href="/assets/logo-512.png" type="image/png">
     <meta name="description" content="Conheça nossos serviços de desenvolvimento de apps, sistemas, automação de processos e agentes inteligentes com IA.">
     <meta name="keywords" content="desenvolvimento de apps, sistemas sob medida, automação de processos, agentes inteligentes, inteligência artificial">
     <link rel="canonical" href="https://labregoia.com/servicos">
