--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -14,6 +14,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre a Labrego IA - Especialistas em Inteligência Artificial</title>
+    <link rel="icon" href="/assets/logo-512.png" type="image/png">
     <meta name="description" content="Conheça a Labrego IA: especialistas em soluções de inteligência artificial para empresas. Nossa missão, valores, equipe e história de inovação.">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
