--- a/pages/vitriny.html
+++ b/pages/vitriny.html
@@ -14,6 +14,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vitriny AI - Vitrine Digital Inteligente | Labrego IA</title>
+    <link rel="icon" href="/assets/logo-512.png" type="image/png">
     <meta name="description" content="Vitriny AI: A vitrine digital inteligente que revoluciona a experiência de compra online. IA que personaliza, recomenda e converte visitantes em clientes.">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
