--- a/404.html
+++ b/404.html
@@ -14,6 +14,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página não encontrada - Labrego IA</title>
+    <link rel="icon" href="/assets/logo-512.png" type="image/png">
     <meta name="description" content="Página não encontrada. Volte para o site da Labrego IA e descubra nossas soluções de inteligência artificial.">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
