--- a/pages/admin.html
+++ b/pages/admin.html
@@ -13,6 +13,7 @@
 
     <meta charset="UTF-8">
     <title>Painel Administrativo - Cases</title>
+    <link rel="icon" href="/assets/logo-512.png" type="image/png">
     <link rel="stylesheet" href="../css/styles.css">
     <style>
         .admin-container {max-width:600px;margin:80px auto;padding:20px;}
