Exibe pop-up personalizado após envio do formulário

--- a/index.html
+++ b/index.html
@@ -799,6 +799,15 @@
     </button>
   </div>
 
+  <!-- Success Modal -->
+  <div class="contact-success-modal" id="successModal" aria-hidden="true">
+    <div class="contact-success-modal__content">
+      <button class="contact-success-modal__close" id="successModalClose" aria-label="Fechar">&times;</button>
+      <h2 class="contact-success-modal__title" id="successModalTitle"></h2>
+      <p class="contact-success-modal__message" id="successModalMessage"></p>
+    </div>
+  </div>
+
   <!-- Seus scripts existentes -->
   <script src="js/script.js"></script>
   <script src="js/cases-vitrine.js" defer></script>
