Atualiza depoimento de cliente

--- a/index.html
+++ b/index.html
@@ -569,16 +569,16 @@
           <div class="testimonial-slide">
             <div class="testimonial-card-modern">
               <div class="testimonial-content">
-                <p>"Profissionalismo excepcional. Entregaram exatamente o que prometeram, no prazo e com qualidade superior. A solução implementada superou nossas expectativas e trouxe resultados imediatos para nossa operação."</p>
+                <p>"Eu utilizo os serviços da Labrego na minha empresa e não poderia estar mais satisfeita. Eles são ótimos, prestativos, cuidadosos e rápidos. A dedicação e a atenção aos detalhes realmente se destacam. Recomendo muito os serviços da Labrego!"</p>
               </div>
               <div class="testimonial-author">
                 <div class="author-avatar">
-                  <img src="assets/avatar-ana.jpg" alt="Ana Costa" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                  <img src="assets/avatar-ana.jpg" alt="Nicole Pinho" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                   <div class="avatar-fallback"><i class="fas fa-user"></i></div>
                 </div>
                 <div class="author-info">
-                  <h4>Ana Costa</h4>
-                  <span>Diretora, InnovaCorp</span>
+                  <h4>Nicole Pinho</h4>
+                  <span>Owner, Grow Properties</span>
                 </div>
               </div>
               <div class="testimonial-rating">
