Centralize contact options on WhatsApp

--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -509,7 +509,7 @@
                         Agendar Consulta Gratuita
                         <span class="arrow">→</span>
                     </button>
-                    <button class="btn btn-outline-white btn-large" onclick="window.open('https://wa.me/11934427070', '_blank')">
+                    <button class="btn btn-outline-white btn-large" onclick="window.open('https://wa.me/5511991108378', '_blank')">
                         Falar no WhatsApp
                     </button>
                 </div>
@@ -551,12 +551,12 @@
                 <h3 class="footer-title">Contato</h3>
                 <div class="footer-contact">
                     <div class="contact-item">
-                        <span class="contact-icon"><i class="fas fa-envelope"></i></span>
-                        <span>contato@labregoia.com.br</span>
+                        <span class="contact-icon"><i class="fab fa-whatsapp"></i></span>
+                        <span>+55 11 99110-8378</span>
                     </div>
                     <div class="contact-item">
-                        <span class="contact-icon"><i class="fas fa-phone"></i></span>
-                        <span>11 934427070</span>
+                        <span class="contact-icon"><i class="fas fa-comments"></i></span>
+                        <span>Fale com nosso time pelo WhatsApp</span>
                     </div>
                     <div class="social-icons">
                         <a href="#" class="social-icon linkedin" aria-label="LinkedIn">
@@ -565,7 +565,7 @@
                         <a href="#" class="social-icon instagram" aria-label="Instagram">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a href="https://wa.me/11934427070" class="social-icon whatsapp" aria-label="WhatsApp">
+                        <a href="https://wa.me/5511991108378" class="social-icon whatsapp" aria-label="WhatsApp">
                             <i class="fab fa-whatsapp"></i>
                         </a>
                         <a href="#" class="social-icon youtube" aria-label="YouTube">
@@ -582,19 +582,9 @@
 </footer>
     <!-- Floating Contact Button -->
     <div class="floating-contact" id="floatingContactWrapper">
-        <div class="floating-menu" id="floatingMenu">
-            <a href="https://wa.me/11934427070" target="_blank" class="floating-option whatsapp" aria-label="WhatsApp">
-                <i class="fab fa-whatsapp"></i>
-            </a>
-            <a href="mailto:contato@labregoia.com.br" class="floating-option email" aria-label="Email">
-                <i class="far fa-envelope"></i>
-            </a>
-        </div>
-        <button class="floating-btn" id="floatingContact" aria-label="Contato">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-        </button>
+        <a href="https://wa.me/5511991108378" target="_blank" rel="noopener" class="floating-btn whatsapp" id="floatingContact" aria-label="Falar com a Labrego IA no WhatsApp">
+            <i class="fab fa-whatsapp" aria-hidden="true"></i>
+        </a>
     </div>
 
     <script src="../js/script.js"></script>
