Adjust WhatsApp floating button position

--- a/leads/index.html
+++ b/leads/index.html
@@ -117,9 +117,11 @@
     </div>
   </div>
 
-  <a href="https://wa.me/5511991108378" target="_blank" rel="noopener" class="floating-btn whatsapp" id="floatingContact" aria-label="Falar com a Labrego IA no WhatsApp">
-    <i class="fab fa-whatsapp" aria-hidden="true"></i>
-  </a>
+  <div class="floating-contact" id="floatingContactWrapper">
+    <a href="https://wa.me/5511991108378" target="_blank" rel="noopener" class="floating-btn whatsapp" id="floatingContact" aria-label="Falar com a Labrego IA no WhatsApp">
+      <i class="fab fa-whatsapp" aria-hidden="true"></i>
+    </a>
+  </div>
 
   <script src="../js/script.js" defer></script>
 </body>
