--- a/index.html
+++ b/index.html
@@ -735,6 +735,10 @@
                 <option value="vitriny">Vitriny</option>
               </select>
             </div>
+            <div class="form-group">
+              <label for="challenge">Qual é o principal desafio que deseja resolver agora?</label>
+              <textarea id="challenge" name="challenge" rows="3" placeholder="Conte, em poucas palavras, o objetivo da sua empresa." required></textarea>
+            </div>
             <div class="form-group"><label for="message">Mensagem</label><textarea id="message" name="message" rows="4" placeholder="Conte-nos sobre seu projeto..."></textarea></div>
             <button type="submit" class="btn btn-primary btn-large">Enviar Mensagem <span class="arrow">→</span></button>
           </form>
