Corrige ortografia do subtítulo de contato

--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
       <div class="section-header">
         <div class="badge">Entre em Contato</div>
         <h2 class="section-title">Vamos conversar sobre seu projeto</h2>
-        <p class="section-subtitle">Preencha seus dados abaixo que entraremos em contato para agendarmos o seu siagnostico gratuito</p>
+        <p class="section-subtitle">Preencha seus dados abaixo que entraremos em contato para agendarmos o seu diagnóstico gratuito</p>
       </div>
       <div class="contact-content">
         <div class="contact-info">
