Fix CRM lead form submission

--- a/leads/index.html
+++ b/leads/index.html
@@ -105,7 +105,7 @@
             <h2>Inscreva sua empresa e receba nossa proposta</h2>
             <p>Preencha seus dados abaixo que entraremos em contato para agendarmos o seu diagnóstico gratuito.</p>
           </div>
-          <form class="contact-form lead-form__form" id="contactForm">
+          <form class="contact-form lead-form__form" id="contactForm" data-form-type="crm-lead" data-crm-endpoint="https://app.labregoia.com/api/crm/clients">
             <div class="form-group">
               <label for="name">Nome completo</label>
               <input type="text" id="name" name="name" required>
